# pdf-to-markdown

./: .gitignore  README.md  pyproject.toml  readme.md
04_markdown/negotiations/: 01_negotiating_without_a_net.md  02_whats_the_best_way_to_give_ground_in_a_negotiation.md  03_how_to_play_friendly_hardball_in_a_negotiation.md  04_managing_your_emotions_during_a_negotiation.md  05_frasier.md  06_what_to_do_when_your_raise_isnt_enough.md  07_negotiating_your_next_job.md  08_salary_negotiations.md  09_sources_of_join_gains_in_negotiations.md  10_exercises_in_negotiation_analysis.md  11_how_to_negotiate_nicely_without_being_a_pushover.md  12_to_succeed_in_negotiation_help_your_counterpart_save_face.md  13_luna_pen.md  14_critical_thinking_is_about_asking_better_questions.md  15_tactics_for_better_remote_negotiations.md  16_how_to_negotiate_with_a_liar.md  17_the_disarmament_negotiation_simulation.md  18_rethinking_negotiation_a_smarter_way_to_split_the_pie.md  19_learning_from_our_conflicts.md  20_best_practices_in_negotiations.md
04_markdown/strategy/: 01_freemark_abbey_winery.md  02_dogfight_over_europe_ryanair.md  03_the_a2_milk_company.md  04_cola_wars_continue_coke_and_pepsi_in_2010.md  05_aldi_the_dark_horse_discounter.md  06_ducati.md  07_netflix.md
05_revised/: truth.md
05_revised/negotiations/: 01_negotiating_without_a_net.md  02_whats_the_best_way_to_give_ground_in_a_negotiation.md  05_frasier.md  13_luna_pen.md  (+16 more)
src/: 01_split_pdf.py  02_tinting.py  03_markdown_conversion.py  main.py  markdown_conversion.py  pdf-to-markdown.py  split_pdf.py  tinting.py
(+7 files in other folders)
